--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Malik Aziz & Co - ">
 <link rel="pingback" href="https://malikaziz.com.au/xmlrpc.php">
-<title>Malik Aziz & Co</title>
+<title>Agnitro Chattarji & Co</title>
 			<script type="text/javascript">
 			var WebFontConfig = WebFontConfig || {};
 			WebFontConfig['active'] = function() {
