--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Malik Aziz & Co - ">
-<link rel="pingback" href="https://malikaziz.com.au/xmlrpc.php">
+<link rel="pingback" href="">
 <title>Agnitro Chattarji & Co</title>
 			<script type="text/javascript">
 			var WebFontConfig = WebFontConfig || {};
